--- a/reader/index.html
+++ b/reader/index.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NASA Research Archive</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div id="app">
+        <!-- Navigation Header -->
+        <header class="header">
+            <div class="container">
+                <div class="nav-content">
+                    <div class="logo">
+                        <h1>NASA Research Archive</h1>
+                    </div>
+                    <nav class="nav">
+                        <a href="#/" class="nav-link">Home</a>
+                    </nav>
+                </div>
+            </div>
+        </header>
 
+        <!-- Main Content Area -->
+        <main id="main-content" class="main">
+            <!-- Content will be dynamically inserted here -->
+        </main>
+
+        <!-- Loading Spinner -->
+        <div id="loading" class="loading hidden">
+            <div class="spinner"></div>
+            <p>Loading...</p>
+        </div>
+
+        <!-- Error Boundary -->
+        <div id="error-boundary" class="error-boundary hidden">
+            <div class="error-content">
+                <h2>Something went wrong</h2>
+                <p id="error-message">An unexpected error occurred.</p>
+                <button onclick="window.location.reload()" class="btn btn--primary">Reload Page</button>
+            </div>
+        </div>
+
+        <!-- Chat Widget -->
+        <div id="chat-widget" class="chat-widget">
+            <!-- Floating Action Button -->
+            <button id="chat-toggle" class="chat-fab">
+                <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                    <path d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm0 14H6l-2 2V4h16v12z"/>
+                    <path d="M7 9h2v2H7zm4 0h2v2h-2zm4 0h2v2h-2z"/>
+                </svg>
+            </button>
+            
+            <!-- Chat Box -->
+            <div id="chat-box" class="chat-box hidden">
+                <div class="chat-header">
+                    <h3>NASA Research Assistant</h3>
+                    <button id="chat-close" class="chat-close">×</button>
+                </div>
+                <div class="chat-messages" id="chat-messages">
+                    <div class="message bot-message">
+                        <div class="message-content">
+                            <p>Hello! I'm your NASA Research Assistant. I'm ready to help you explore our research archive.</p>
+                            <small>This feature will be available soon!</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="chat-input-container">
+                    <input type="text" id="chat-input" class="chat-input" placeholder="Ask about NASA research..." disabled>
+                    <button id="chat-send" class="chat-send-btn" disabled>
+                        <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="app.js"></script>
+</body>
+</html>
